# zenit

./: .cursorrules  .gitignore  README.md  calculate_lightness.py  docker-compose.yml  premium-tabs-preview.html
backend/: .dockerignore  .env.example  .gitignore  ARGON2_DEPLOYMENT.md  Dockerfile  QUICK_START.md  README.md  RECURRING_TRANSACTIONS_GUIDE.md  SERVER_DEPLOY.md  check_recurring.py  force_generate_missed.py  generate_all_recurring.sh  migrate_db.ps1  migrate_db.sh  pyproject.toml  requirements.txt  test_api_trigger.py  test_category_icons.py
backend/api/: admin.py  exceptions.py  filters.py  pagination.py  permissions.py  urls.py  validators.py
backend/api/management/commands/: assign_missing_icons.py  diagnose_icons.py  generate_insurance_returns.py  generate_recurring_transactions.py  list_icons.py  migrate_icons.py  migrate_user_data.py
backend/api/migrations/: 0001_initial.py
backend/api/models/: __init__.py  account.py  financial.py  investment.py  transaction.py  user.py
backend/api/serializers/: __init__.py  account.py  dashboard.py  financial.py  investment.py  transaction.py  trends.py  user.py
backend/api/services/: __init__.py  dashboard_service.py  transaction_service.py  trends_service.py
backend/api/views/: __init__.py  account.py  dashboard.py  financial.py  investment.py  transaction.py  trends.py  user.py
backend/budget_project/: asgi.py  settings.py  urls.py  wsgi.py
backend/migrations/: README.md  backup_restore.py  drop_all_tables.sql  full_schema.sql  restore_data.sql  verify_migration.py
frontend/: .env.production  (+7 more)
(+150 files in other folders)
